## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_DATA_DIR=\""$(datadir)"\" 

AM_CFLAGS =\
	 -Wall\
	 -g\
	 -lusb

bin_PROGRAMS = asusdisplay

asusdisplay_SOURCES = \
	main.c       \
	displayconstants.h       \
	HAL_display.c       \
	HAL_display

asusdisplay_LDFLAGS = 

asusdisplay_LDADD = 

